<resources>
    <string name="app_name">IOTDom</string>
    <string name="log_hello">Witamy w aplikacji do zarządzania domem. Podaj swoje dane logowania:</string>
    <string name="login">Login</string>
    <string name="password">Hasło</string>
    <string name="login_button_text">Zaloguj</string>
    <string name="servConfError">Nie można odczytać pliku konfiguracyjnego</string>
    <string name="inetAdressError">Nie można odczytać adresu sieciowego z pliku konfiguracyjnego</string>
    <string name="portError">Niepoprawna wartość portu</string>
    <string name="connectionTimeout">Serwer nie odpowiedział na próbę połączenia w wyznaczonym czasie</string>
    <string name="connectionError">Wystąpił błąd w trakcie nawiązywania połączenia z serwerem</string>
    <string name="writingError">Bład w trakcie przesyłania danych do serwera</string>
    <string name="serverResponseError">Odebrano niepoprawne dane. Połączenie zakończone.</string>
    <string name="servChallengeError">Nie udało się rozpoznać serwera</string>
    <string name="logInfoError">Login lub hasło przekracza dozwoloną długość (30 znaków)</string>
    <string name="getServices">Pobierz listę usług</string>
    <string name="refresh">Odśwież stan usług</string>
    <string name="logout">Wyloguj</string>
    <string name="read">Odczytaj</string>
    <string name="set">Ustaw</string>
    <string name="on">Aktywne</string>
    <string name="off">Nieaktywne</string>
    <string name="toSet">Wartość do ustawienia</string>
    <string name="maxValue">Wartość maksymalna</string>
    <string name="minValue">Wartość minimalna</string>
    <string name="wrongSSID">Niepoprawne SSID</string>
    <string name="serviceUnavailible">Ta usługa nie jest obecnie dostępna</string>
    <string name="keyError">Nie można odczytać certyfikatu serwera</string>
    <string name="wrong_login_data">Wprowadzone dane logowania nie są poprawne. Sprawdź poprawnośc danych i spróbuj ponownie</string>
</resources>
