<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/analogOutName"
        android:layout_width="match_parent"
        android:background="@drawable/back"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/analogOutMinVal"
        android:layout_width="match_parent"
        android:background="@drawable/back"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/analogOutMaxVal"
        android:layout_width="match_parent"
        android:background="@drawable/back"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/analogOutCurVal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/back" />

        <Button
            android:id="@+id/analogOutReadButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="readButtonHandler"
            android:text="@string/read" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/analogOutSetVal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:background="@drawable/back"
            android:hint="@string/toSet"
            android:inputType="numberSigned"
            android:singleLine="true" />

        <Button
            android:id="@+id/analogOutSetButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:onClick="setButtonHandler"
            android:text="@string/set" />

    </LinearLayout>

</LinearLayout>